<resources>
    <string name="app_name">Grupo ESS v1.0</string>
    <string name="action_settings">Filtrar</string>
    <string name="action_buscar">Buscar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- GrupoEss backdrop menu labels -->
    <string name="impresoras_label">Impresoras</string>
    <string name="papelSublimacion_label">Papel Sublimación</string>
    <string name="tintas_label">Tintas</string>
    <string name="favoritos_label">Favoritos</string>
    <string name="tops_label">Tops</string>
    <string name="bottoms_label">Bottoms</string>
    <string name="dresses_label">Dresses</string>
    <string name="account_label">Mi Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>