<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/impresoras_label"/>

    <com.google.android.material.button.MaterialButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/papelSublimacion_label"/>

    <com.google.android.material.button.MaterialButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tintas_label"/>

    <com.google.android.material.button.MaterialButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritos_label"/>

    <com.google.android.material.button.MaterialButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tops_label"/>

    <View
        android:layout_height="1dp"
        android:layout_width="56dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mycount"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_label"/>

</merge>